버스리스트 상세,로고랑 아이템호버 애니메이션,새페이지 스크롤 맨위로 완료

--- a/src/components/BusList.css
+++ b/src/components/BusList.css
@@ -48,6 +48,9 @@
     margin-top: 10px;
     
 }
+.buslist-contentBox:hover{
+    transform: translateY(-5px);
+}
 .buslist-leftbox{
     width:49px;
     background-color: #DADEDB;
