--- a/src/components/BusStopList.css
+++ b/src/components/BusStopList.css
@@ -1,3 +1,7 @@
+.busstop-conatainer{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(420px, 1fr));
+}
 .busstop-contentBox{
     width:90%;
     background-color: white;
@@ -5,6 +9,11 @@
     display: flex;
     align-items: center;
     margin: 10px auto;
+    max-width: 400px;
+    cursor: pointer;
+}
+.busstop-contentBox:hover{
+    transform: translateY(-10px);
 }
 .busstop-leftbox{
     width:49px;
@@ -30,6 +39,7 @@
     height:100%;
     text-align: left;
     margin-left: 10%;
+    padding-top: 20px;
 }
 .busstop-title{
     font-size: 23px;
