--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -17,11 +17,14 @@
     position: relative;
     margin-top: 30px;
     max-width: 400px;
+    
    
 
 
 }
-
+.mainButton:hover{
+    transform: translateY(-10px);
+}
 .mainTitle{
     position: absolute;
     left:20%;
